--- a/day2/day2-cheatsheet.html
+++ b/day2/day2-cheatsheet.html
@@ -69,7 +69,10 @@
       <div class="sub">Your luteal phase is asking for this</div>
     </header>
 
-    <figure><img src="20.jpg" alt="Woman journaling in the evening light"></figure>
+    <figure class="hero">
+  <img src="20.jpg" alt="Woman journaling in the evening light">
+</figure>
+
 
     <section class="card">
       <h2>🧭 Cycle Lens</h2>
