--- a/day2/day2-cheatsheet.html
+++ b/day2/day2-cheatsheet.html
@@ -17,6 +17,17 @@
   header{background:var(--brand);color:#fff;border-radius:var(--radius);padding:22px;text-align:center;box-shadow:0 10px 30px rgba(0,0,0,.10)}
   header h1{margin:0;font-size:clamp(22px,4.2vw,36px);line-height:1.15}
   .sub{opacity:.95;margin-top:6px}
+.hero {
+  margin-top: 14px;
+  border-radius: var(--radius);
+  overflow: hidden;
+  box-shadow: 0 8px 22px rgba(0,0,0,.06);
+}
+.hero img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
 
   .card{background:var(--card);border-radius:var(--radius);padding:18px;margin-top:16px;
     box-shadow:0 8px 22px rgba(0,0,0,.06);border:1px solid var(--line)}
